clicking the app name now opens the Home view

--- a/app/resources/app-theme.css
+++ b/app/resources/app-theme.css
@@ -60,6 +60,10 @@ body {
     text-shadow: 0 0 2px #333;
 }
 
+.home-button {
+    cursor: pointer;
+}
+
 .iteration {
     display: inline-block;
     background:  linear-gradient(105deg,
