the Home view can now be closed
also implemented the "Review Requests" list

--- a/app/partials/Home.html
+++ b/app/partials/Home.html
@@ -16,5 +16,9 @@
                 <div id="otherActiveReviews" class="filler"></div>
             </div>
         </content>
+        <footer style="display: none">
+            <button class="close">Back</button>
+            <div class="filler"></div>
+        </footer>
     </div>
 </div>
