reworked the title bar to show location context
I also moved the "New Review" button to the footer toolbar. It's not as
discoverable down there, but it does follow the UX pattern of the other
dialogs.

--- a/app/partials/Home.html
+++ b/app/partials/Home.html
@@ -1,6 +1,6 @@
 <div class="dialog home">
     <div>
-        <title>Twice-Over</title>
+        <header>Twice-Over <div class="iteration">Home</div></header>
         <content>
             <div class="column">
                 <label>My Reviews</label>
@@ -10,15 +10,14 @@
                 <div id="reviewRequests"></div>
             </div>
             <div class="column">
-                <button id="newReviewButton">New Review</button>
-
                 <label>Other Active Reviews</label>
                 <div id="otherActiveReviews" class="filler"></div>
             </div>
         </content>
-        <footer style="display: none">
-            <button class="close">Back</button>
+        <footer>
+            <button class="close" style="display: none">Back</button>
             <div class="filler"></div>
+            <button id="newReviewButton" class="save">New Review</button>
         </footer>
     </div>
 </div>
