--- a/app/partials/ImportDialog.html
+++ b/app/partials/ImportDialog.html
@@ -1,6 +1,6 @@
 <div class="dialog" style="display: none">
     <div id="import-dialog">
-        <title>New Review</title>
+        <header>Twice-Over <div class="iteration">New Review</div></header>
         <content class="import-content">
             <div class="column">
                 <label>Changes</label>
