--- a/app/resources/app-theme.css
+++ b/app/resources/app-theme.css
@@ -341,6 +341,12 @@ body {
 .scroll-indicators > .added {
     fill: #070;
 }
+.scroll-indicators > .comments {
+    fill: none;
+    stroke: white;
+    stroke-width: 1px;
+    stroke-opacity: 0.4;
+}
 
 code.code-block {
     flex: 1;
