statuses now synchronizes
Reviewers now also trigger automatic status changes when opening reviews
for the first time.

--- a/app/resources/app-theme.css
+++ b/app/resources/app-theme.css
@@ -518,6 +518,11 @@ comment > iterations > *.selected {
 .status-widget.aborted {
     background: #933;
 }
+.status-widget .inactive > label {
+    line-height: normal;
+    color: #bbb;
+    font-size: 16px;
+}
 .status-widget .active > :not(:last-child) {
     margin-right: 10px;
 }
