adding EmailEntry to the ReviewStatus page
for the purpose of adding reviewers after the review is created

--- a/app/partials/EmailEntry.html
+++ b/app/partials/EmailEntry.html
@@ -1,6 +1,5 @@
 <div class="email-entry column">
-    <label for="review-reviewers">Reviewers</label>
-    <div id="reviewer-container" style="display: none"></div>
+    <div class="reviewer-container" style="display: none"></div>
     <div class="row-group">
         <input id="review-nameentry" class="filler" type="text" min="3" />
         <button id="add-reviewer" class="disabled">+</button>
