--- a/app/partials/ImportDialog.html
+++ b/app/partials/ImportDialog.html
@@ -7,6 +7,8 @@
                 <div id="change-container" class="filler"></div>
             </div>
             <div class="new-review-right column">
+                <label for="review-reviewers">Reviewers</label>
+                
                 <label for="review-title">Title</label>
                 <input id="review-title" type="text" min="5" max="1000" />
 
@@ -19,8 +21,8 @@
             <div class="filler"></div>
             <button class="save disabled">Create Review</button>
         </footer>
-        
-        
+
+
         <!-- "Loading Changes..." UI-->
         <content class="import-status" style="display: none">
             <label>Loading changes...</label>
