moved "Title" to the top of the New Review page
It makes no sense to have "Reviewers" first, don't know what I was
thinking!

--- a/app/partials/ImportDialog.html
+++ b/app/partials/ImportDialog.html
@@ -7,10 +7,10 @@
                 <div id="change-container" class="filler"></div>
             </div>
             <div class="new-review-right column">
-                <label for="review-reviewers">Reviewers</label>
-                
                 <label for="review-title">Title</label>
                 <input id="review-title" type="text" min="5" max="1000" />
+
+                <label class="reviewers" for="review-reviewers">Reviewers</label>
 
                 <label for="review-description">Description</label>
                 <textarea id="review-description" class="filler"></textarea>
